--- a/web/html/register.html
+++ b/web/html/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Verification</title>
+	<title>Registration</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -23,29 +23,63 @@
 </head>
 <body>
 	
-	<div class="limiter" id="tours">
+	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="images/Tour-Uz-Logo.svg" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form" onsubmit="confirmHandler(event)">
+				<form class="login100-form validate-form" onsubmit="registerHandler(event)">
 					<span class="login100-form-title">
-						Confirmation
+						Register
 					</span>
 
-					<div class="wrap-input100 validate-input">
-						<input class="input100" type="text" name="emailconfirm" placeholder="Code">
+          <div class="wrap-input100 validate-input">
+						<input class="input100" type="text" name="fullname" placeholder="Full name">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
-							<i class="fa fa-key" aria-hidden="true"></i>
+							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					
+
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="text" name="email" placeholder="Email">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input">
+						<input class="input100" type="text" name="username" placeholder="Username">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-solid fa-user" aria-hidden="true"></i>
+						</span>
+					</div>
+
+					<div class="wrap-input100 validate-input">
+						<input class="input100" type="phonenumber" name="pass" placeholder="Phone number">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-phone" aria-hidden="true"></i>
+						</span>
+					</div>
+
+                    <div class="wrap-input100 validate-input" data-validate = "Password is required">
+						<input class="input100" type="password" name="confirmpass" placeholder="password">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
 					
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Confirm
+							Register
 						</button>
 					</div>
 
@@ -55,7 +89,6 @@
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
-
 				</form>
 			</div>
 		</div>
@@ -71,6 +104,8 @@
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
 	<script src="vendor/select2/select2.min.js"></script>
+
+
 <!--===============================================================================================-->
 	<script src="vendor/tilt/tilt.jquery.min.js"></script>
 	<script >
@@ -80,7 +115,7 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
-	<script src="./js/confirm.js"></script>
+	<script src="./js/register.js"></script>
 
 </body>
 </html>
